webapp/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cline
  labels:
    name: cline
    environment: production
